2006-08-30  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_access/pam_access.8.xml: All services supported.
	* modules/pam_access/pam_access.c (pam_sm_open_session): New.
	(pam_sm_close_session): New.
	(pam_sm_chauthtok): New.

	* modules/pam_access/pam_succeed_if.8.xml: All services supported.
	* modules/pam_access/pam_succeed_if.c (pam_sm_setcred): Return
	PAM_IGNORE rather than success.
	(pam_sm_open_session): New.
	(pam_sm_close_session): New.
	(pam_sm_chauthtok): New.

2006-08-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Move shell code to execute tests from here ...
	* xtests/run-xtests.sh: ... to here.
	* xtests/*.c: Include config.h.
	* tests/*.c: Likewise.

	* modules/pam_namespace/pam_namespace.c: Use pam_modutil_getpwnam()
	instead of getpwnam().

2006-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/sag/pam_loginuid.xml: New.
	* doc/sag/Linux-PAM_SAG.xml: Include pam_loginuid.xml.

	* configure.in: Add modules/pam_loginuid/Makefile.
	* modules/Makefile.am: Add pam_loginuid sub directory.

	* libpam/pam_static_modules.h: Add pam_loginuid.

	* modules/pam_loginuid/Makefile.am: New.
	* modules/pam_loginuid/tst-pam_loginuid: New.
	* modules/pam_loginuid/pam_loginuid.8.xml: New.
	* modules/pam_loginuid/pam_loginuid.8: New, generated from XML source.
	* modules/pam_loginuid/pam_loginuid.c: New.
	* modules/pam_loginuid/README.xml: New.
	* modules/pam_loginuid/README: New, generated from XML source.

2006-08-29  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_exec/pam_exec.c (call_exec): Add required third
	argument to open() call with O_CREAT flag set.

2006-08-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Remove
	duplicate code.

2006-08-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.6.2

	* modules/pam_lastlog/pam_lastlog.c (last_login_date): Create
	lastlog file if it does not exist.

	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Check