@@ -1,11 +1,11 @@
 .\"     Title: pam_succeed_if
 .\"    Author: 
-.\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
-.\"      Date: 08/05/2006
+.\" Generator: DocBook XSL Stylesheets vsnapshot_2006\-08\-24_0226 <http://docbook.sf.net/>
+.\"      Date: 08/31/2006
 .\"    Manual: Linux\-PAM
 .\"    Source: Linux\-PAM
 .\"
-.TH "PAM_SUCCEED_IF" "8" "08/05/2006" "Linux\-PAM" "Linux\-PAM"
+.TH "PAM_SUCCEED_IF" "8" "08/31/2006" "Linux\-PAM" "Linux\-PAM"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -101,11 +101,7 @@ User is not in given group.
 (user,host) is not in given netgroup.
 .SH "MODULE SERVICES PROVIDED"
 .PP
-The
-\fBauth\fR
-and
-\fBaccount\fR
-services are supported.
+All services are supported.
 .SH "RETURN VALUES"
 .TP 3n
 PAM_SUCCESS
